--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+tensorflow==2.3.1
 numpy==1.16.3
-torch==1.0.1
+torch==1.7.0
+torchvision===0.8.1 
+torchaudio===0.7.0
 spacy==2.1.3
 transformers==2.2.2
 Cython==0.29.10
@@ -9,3 +12,4 @@ argparse
 scikit-learn
 pytest
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.1.0/en_core_web_sm-2.1.0.tar.gz
+newspaper3k
