--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-tensorflow
+tensorflow=2.3.1
 numpy==1.16.3
 torch==1.7.0
 torchvision===0.8.1 
@@ -12,6 +12,7 @@ argparse
 scikit-learn
 pytest
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.1.0/en_core_web_sm-2.1.0.tar.gz
+bert-extractive-summarizer
 newspaper3k
 flask
 flask-cors
